--- a/.github/workflows/main-do.yml
+++ b/.github/workflows/main-do.yml
@@ -3,7 +3,7 @@ name: Build Docker and Deploy to DigitalOcean
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build-and-deploy:
